# BCF2GraphQL_TUM

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CITATION.cff  Dockerfile  LICENSE  README.md  bcf_parser.py  ifc_diff.py  ifc_reader.py  import_bcf.py  main.py  pyproject.toml  render.yaml  requirements-deploy.txt
benchmarks/: benchmark.py  comparison_dashboard.py  dashboard.py  flat_scaling_dashboard.py  generate_benchmark_data.py  locust_scaling.py  locust_scaling_dashboard.py  make_env_analyses.py
db/: database.py
exports/: BasicModelIssuesV1.bcf  BasicModelIssuesV2.bcf  TestTopicsV1.bcf  TestTopicsV2.bcf  TestTopicsV3.bcf
ifcs/: TestV1.ifc  TestV2.ifc  TestV3.ifc  TestV4.ifc
locust_results/gql_10users/: stats_stats.csv  stats_stats_history.csv
locust_results/gql_1user/: stats_stats.csv  stats_stats_history.csv
locust_results/gql_5users/: stats_stats.csv  stats_stats_history.csv
locust_results/rest_10users/: stats_stats.csv  stats_stats_history.csv
locust_results/rest_1user/: stats_stats.csv  stats_stats_history.csv
locust_results/rest_5users/: stats_stats.csv  stats_stats_history.csv
resolvers/: __init__.py  diff_resolvers.py  history_resolvers.py  ifc_resolvers.py  query.py
rest/: __init__.py  bcf.py  odata_filter.py
results/: benchmark_results_raw_local.csv  benchmark_results_raw_render.csv  benchmark_results_summary_local.csv  benchmark_results_summary_render.csv
schema/: bcf.graphql  diff.graphql  ifc.graphql
static/: ifc-viewer.css  ifc-viewer.html  ifc-viewer.js  viewer.css  viewer.html  viewer.js
